# interposer-nochild

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  Readme.md  cmake_sandbox.bat  cmake_sandbox.cmake  cmake_sandbox.sh  log_blocked.c  log_blocked.h  no-children-ninja.sb  no-children-windows.cpp  no-children.c  no-children.sb  no-children_linux.c  no-children_macos.c  no-children_seccomp.c  no-children_seccomp.cpp  no-children_unix.c  no-children_windows.cpp  run_sandbox.cmake  sandbox.cfg  sandbox_run.cmake
.github/: copilot-instructions.md
.github/workflows/: ci.yml
example/: CMakeLists.txt
seccomp/: Makefile  Readme.md
src/: no-children_unix.c  no-children_windows.cpp
test/: CMakeLists.txt  nochild-selftest-windows.cpp  nochild-selftest.c  test-sip-control.sh
